<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SecurePassword</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="biometrics">Biometrics</string>
    <string name="pattern">Pattern</string>
    <string name="register_enter_your_credentials">Set your credentials</string>
    <string name="register_default_auth_mode">Default authenticate mode: %s</string>
    <string name="register_pattern_title">Enter a secure pattern to identify you as alternative to biometrics and password authentication:</string>
    <string name="register_pwd_title">Password is needed in order to can authenticate on web and also encrypt your passwords</string>
    <string name="password_help">Enter your password to authenticate please</string>
    <string name="pattern_help">Draw your pattern to authenticate please</string>
    <string name="biometric_help">Log in using your biometric credential</string>
    <string name="register_help">Register on SecurePassword in order to can start storing your credentials and keep you accounts safe!</string>
    <string name="already_have_account_help">Do you already have an account? Do login please!</string>
    <string name="click_here">click here</string>
    <string name="save">Save</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="change_auth_method">Change auth method</string>
    <string name="ok">OK</string>
    <string name="try_again">Try again</string>
    <string name="home">Home</string>
    <string name="empty_state_title">Oops :(</string>
    <string name="empty_state_body">There are no password yet. Add new one!</string>
    <string name="login">Login</string>
    <string name="pick">Pick</string>
    <string name="add_key">Create new key</string>
    <string name="generate">Generate</string>
    <string name="custom_size">Custom size</string>
    <string name="predefined_size">Predefined size</string>
    <string name="length">Length</string>
    <string name="simple">Simple</string>
    <string name="complex">Complex</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="create_directory">Create directory</string>
    <string name="move_bottom_sheet_title">Move to…</string>
    <string name="move">Move</string>
    <string name="directory">Directory</string>
    <string name="dialog_delete_title">Confirmation</string>
    <string name="dialog_delete_message">Are you sure to delete this? Once done this action can not be revert.</string>
    <string name="dialog_delete_accept">@string/delete</string>
    <string name="key">Key</string>
    <string name="password_copied">Password Copied!</string>
    <string name="create_password">Create password</string>
    <string name="update_password">Update password</string>
    <string name="complexity">Complexity</string>
    <string name="date_creation">Created on %s</string>
    <string name="date_updated">Last updated on %s</string>
    <string name="new_dir_bottom_sheet_title">Create new directory</string>
    <string name="update_dir_bottom_sheet_title">Update directory name</string>
    <string name="generate_bottom_sheet_title">Password generation settings</string>
    <string name="hint_account_name">Account name</string>
    <string name="entry_options">%s options</string>
    <string name="hint_password">@string/password</string>
    <string name="hint_extra_info">Brief</string>
    <string name="help_mandatory_field">Mandatory field</string>
    <string name="help_optional_field">Optional field</string>
    <string name="pick_auth_mode_title">Choose default authentication</string>
    <string name="pick_auth_mode_message">This will configure the default mode to identify you on SecurePassword :)!</string>
    <string name="error">Error</string>
    <string name="error_generic">Oops.. Seems that something went wrong. Try again later please.</string>
    <string name="error_biometrics_generic">Hum.. Biometric service error. Try it again later!</string>
    <string name="error_password_not_match">Invalid password! Try again.</string>
    <string name="error_password_length">Password must have at least 8 characters</string>
    <string name="error_biometrics_no_permissions">Hum.. You don\'t have granted permissions to use this feature. Enable it on Settings!</string>
    <string name="error_biometrics_currently_unavailable">Ops, it seems that biometric service are not currently available :(</string>
    <string name="error_biometrics_non_enrolled">Ops, no biometrics enrolled on device. Check it on Settings</string>
    <string name="error_biometrics_non_hardware">Ops, this device have not biometric feature. Choose another auth method</string>
    <string name="error_biometrics_invalid">Oops, invalid biometrics. Try again</string>
    <string name="error_storing_credentials">Oops, there was an error while storing credentials :(</string>
    <string name="error_pattern_generic">Oops, it seems that there was an error with pattern, try it again.</string>
    <string name="error_pattern_size">Pattern minimum length must be 4 dots.</string>
    <string name="error_pattern_invalid">Invalid pattern.. Try again</string>
    <string name="error_email_pattern">Invalid field, email should contain \'@\' and ends with \'.com\' or \'.es\'</string>
    <string name="error_blank_field">Invalid field, must not be blank.</string>
</resources>