<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra"
            android:layout_marginTop="@dimen/margin_big"
            android:layout_marginEnd="@dimen/margin_extra"
            android:layout_marginBottom="@dimen/margin_extra"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back"
                    app:tint="@color/colorPrimaryDark"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginStart="@dimen/margin_normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/title"
                    style="@style/Text.Header"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:text="@string/register_enter_your_credentials"
                    app:layout_constraintBottom_toBottomOf="@id/backButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/backButton"
                    app:layout_constraintTop_toTopOf="@id/backButton" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    style="@style/AppTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_big"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailTextInput"
                        style="@style/AppTextInputText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLength="40"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/pwdTitle"
                    style="@style/Text.Hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_big"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:gravity="center"
                    android:text="@string/register_pwd_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/emailInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pwdInputLayout"
                    style="@style/AppTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_big"
                    android:layout_marginEnd="@dimen/margin_normal"
                    app:endIconCheckable="true"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/colorSecondaryDark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pwdTitle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pwdTextInput"
                        style="@style/AppTextInputText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="40"
                        android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/patternTitle"
                    style="@style/Text.Hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginTop="@dimen/margin_big"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:gravity="center"
                    android:text="@string/register_pattern_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/pwdInputLayout" />

                <com.andrognito.patternlockview.PatternLockView
                    android:id="@+id/patternLockView"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/margin_normal"
                    app:correctStateColor="@android:color/holo_green_dark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/patternTitle"
                    app:normalStateColor="@color/colorPrimaryDark"
                    app:wrongStateColor="@color/pomegranate" />

                <TextView
                    android:id="@+id/authModeButton"
                    style="@style/ButtonLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_extra"
                    android:layout_marginEnd="@dimen/margin_big"
                    android:layout_marginBottom="@dimen/margin_big"
                    android:text="@string/change"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/patternLockView" />

                <TextView
                    android:id="@+id/currentAuthMode"
                    style="@style/Text.Hint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_extra"
                    android:layout_marginEnd="@dimen/margin_extra"
                    android:layout_marginBottom="@dimen/margin_big"
                    android:textSize="@dimen/text_small"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/storeButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/authModeButton" />

                <Button
                    android:id="@+id/storeButton"
                    style="@style/Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:layout_marginEnd="@dimen/margin_extra"
                    android:text="@string/save"
                    app:layout_constraintBottom_toBottomOf="@id/currentAuthMode"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>
</layout>